# TDD

.github/workflows/: django_tests.yaml
Blog/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Blog/Blog/: settings.py  urls.py
Blog/auth/: serializers.py  urls.py  views.py
Blog/auth/tests/: tests_auth_views.py
Blog/core/: admin.py  models.py  serializers.py  urls.py  views.py
Blog/core/migrations/: 0001_initial.py
Blog/core/tests/: tests_blog_model.py  tests_blog_views.py
